<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <data>
        <variable name="folder"
            type="fr.nspu.dev.recordvoicelearning.model.Folder"/>
        <variable name="callback"
            type="fr.nspu.dev.recordvoicelearning.utils.callback.ClickCallback"/>
    </data>

    <android.support.v7.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:onClick="@{()->callback.onClick(folder)}"
        android:onLongClick="@{()->callback.onLongClick(folder)}"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cd_folder_name"
                android:hint="Title"
                android:text="@{folder.name}"/>
            <TextView
                android:id="@+id/type_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cd_folder_name"
                android:hint="Question"
                android:text="@{folder.typeQuestion}"
                android:layout_marginLeft="@dimen/folder_margin_type"/>
            <TextView
                android:id="@+id/type_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cd_folder_name"
                android:hint="Answer"
                android:text="@{folder.typeAnswer}"
                android:layout_marginLeft="@dimen/folder_margin_type"/>
        </LinearLayout>


    </android.support.v7.widget.CardView>
</layout>
