<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/validate"
        android:id="@+id/action_validate_add_folder"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="always"
        />
</menu>